# MAVSDK

examples/takeoff_land/: CMakeLists.txt  takeoff_and_land.cpp
src/: plugins.txt
src/mavsdk/plugins/landing_target/: CMakeLists.txt  landing_target.cpp  landing_target_impl.cpp  landing_target_impl.h
src/mavsdk/plugins/landing_target/include/plugins/landing_target/: landing_target.h
src/mavsdk/plugins/landing_target_server/: CMakeLists.txt  landing_target_server.cpp  landing_target_server_impl.cpp  landing_target_server_impl.h
src/mavsdk/plugins/landing_target_server/include/plugins/landing_target_server/: landing_target_server.h
src/mavsdk/plugins/precision_target/: CMakeLists.txt  precision_target.cpp  precision_target_impl.cpp  precision_target_impl.h
src/mavsdk/plugins/precision_target/include/plugins/precision_target/: precision_target.h
src/mavsdk_server/src/: grpc_server.cpp  grpc_server.h
src/mavsdk_server/src/plugins/landing_target/: landing_target_service_impl.h
src/mavsdk_server/src/plugins/landing_target_server/: landing_target_server_service_impl.h
src/mavsdk_server/src/plugins/precision_target/: precision_target_service_impl.h
